snapshots/care/data4life/hc-util-sdk-kmp/error/1.11.0-SNAPSHOT/error-1.11.0-20220426.120746-1.pom.sha512
377199f4b324baff59c9f5224ce1080f199f8344b7fa6aa16ca79f9ffb629d130d8e531b53290639eb93fded2ba068fed407ad126d415975aa892f2ff7c8bfa6